# agentic-document-rag

./: .env.example  ingestion.py  main.py  pyproject.toml  readme.md
.chroma/: chroma.sqlite3
graph/: graph.py  state.py
graph/chains/: generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
